Bug 116156 - Assertion failure in htmltokenizer.cpp:159
Summary: Assertion failure in htmltokenizer.cpp:159
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml parsing (other bugs)
Version First Reported In: 3.4.92
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 116378 116660 116713 116846 117148 117424 117467 117915 118430 118568 119164 119246 119719 121034 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-11-12 02:03 UTC by Thiago Macieira
Modified: 2014-05-08 11:02 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase (357 bytes, application/x-tgz)
2005-11-22 04:35 UTC, Maksim Orlovich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2005-11-12 02:03:01 UTC
Assertion message:   
konqueror [kdeinit]  
--preload: /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:159:  
void khtml::HTMLTokenizer::reset(): Assertion `m_executingScript == 0' failed.  
  
Backtrace:  
Using host libthread_db library "/lib/tls/libthread_db.so.1".  
[Thread debugging using libthread_db enabled]  
[New Thread -1233852736 (LWP 26748)]  
[KCrash handler]  
#7  0xffffe410 in ?? ()  
#8  0xbfffbc10 in ?? ()  
#9  0x00000006 in ?? ()  
#10 0x0000687c in ?? ()  
#11 0xb6d067e5 in raise () from /lib/tls/libc.so.6  
#12 0xb6d08399 in abort () from /lib/tls/libc.so.6  
#13 0xb6cff971 in __assert_fail () from /lib/tls/libc.so.6  
#14 0xb5d9421f in khtml::HTMLTokenizer::reset (this=0x875b858)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:159  
#15 0xb5d94768 in ~HTMLTokenizer (this=0x875b858)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:1686  
#16 0xb5d6790f in DOM::DocumentImpl::detach (this=0x8772300)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/xml/dom_docimpl.cpp:1166  
#17 0xb5d2357c in KHTMLPart::clear (this=0x84a6290)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/khtml_part.cpp:1406  
#18 0xb5d25bb6 in ~KHTMLPart (this=0x84a6290)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/khtml_part.cpp:505  
#19 0xb5d236d6 in KHTMLPart::clear (this=0x83f7020) at qguardedptr.h:186  
#20 0xb5d23832 in KHTMLPart::begin (this=0x83f7020, url=@0xbfffc250,   
    xOffset=0, yOffset=0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/khtml_part.cpp:1879  
#21 0xb5ecdb8a in KJS::Window::get (this=0x842a898, exec=0xbfffcc80,   
    p=@0xbfffc470)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/ecma/kjs_window.cpp:574  
#22 0xb5bb5bb1 in KJS::Reference::getValue (this=0xbfffc460, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/reference.cpp:143  
#23 0xb5b729c2 in KJS::Node::evaluate (this=0x0, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:130  
#24 0xb5b74c1a in KJS::AccessorNode2::evaluateReference (this=0x86d0158,   
    exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:668  
#25 0xb5b729ac in KJS::Node::evaluate (this=0x0, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:130  
#26 0xb5b75001 in KJS::ArgumentListNode::evaluateList (this=0x86d0170,   
    exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:720  
#27 0xb5b7524b in KJS::ArgumentsNode::evaluateList (this=0x0, exec=0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:756  
#28 0xb5b758e5 in KJS::FunctionCallNode::evaluate (this=0x86d01a0,   
    exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:832  
#29 0xb5b78b08 in KJS::AssignNode::evaluate (this=0x8636ac0, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1562  
#30 0xb5b7aaf3 in KJS::ExprStatementNode::execute (this=0x8636ae0,   
    exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1980  
#31 0xb5b8177e in KJS::SourceElementsNode::execute (this=0x8940660,   
    exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:3091  
#32 0xb5b7a8fd in KJS::BlockNode::execute (this=0x852a880, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1942  
#33 0xb5b8074b in KJS::TryNode::execute (this=0x87be480, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1729  
#34 0xb5b81828 in KJS::SourceElementsNode::execute (this=0x1, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:3097  
#35 0xb5b7a8fd in KJS::BlockNode::execute (this=0x80fe6b0, exec=0xbfffcc80)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1942  
#36 0xb5ba916c in KJS::DeclaredFunctionImp::execute (this=0x6, exec=0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/function.cpp:579  
#37 0xb5ba8650 in KJS::FunctionImp::call (this=0x8150ce8, exec=0xbfffd360,   
    thisObj=@0x6, args=@0xbfffce00)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/function.cpp:354  
#38 0xb5bafb49 in KJS::Object::call (this=0x0, exec=0xbfffd360, thisObj=@0x0,   
    args=@0x0) at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/object.cpp:70  
#39 0xb5b75cbb in KJS::FunctionCallNode::evaluate (this=0x0, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:870  
#40 0xb5b78b08 in KJS::AssignNode::evaluate (this=0x8607b18, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1562  
#41 0xb5b7aaf3 in KJS::ExprStatementNode::execute (this=0x867d4f0,   
    exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1980  
#42 0xb5b81828 in KJS::SourceElementsNode::execute (this=0x1, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:3097  
#43 0xb5b7a8fd in KJS::BlockNode::execute (this=0x80f8228, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1942  
#44 0xb5b8074b in KJS::TryNode::execute (this=0x87e7dc8, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1729  
#45 0xb5b81828 in KJS::SourceElementsNode::execute (this=0x0, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:3097  
#46 0xb5b7a8fd in KJS::BlockNode::execute (this=0x87e1b50, exec=0xbfffd360)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/nodes.cpp:1942  
#47 0xb5b9bceb in KJS::InterpreterImp::evaluate (this=0x83796f8,   
    code=@0xbfffd360, thisV=@0xbfffd580)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/internal.cpp:881  
#48 0xb5bb054a in KJS::Interpreter::evaluate (this=0x0, code=@0x0, thisV=@0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kjs/interpreter.cpp:166  
#49 0xb5ee197b in KJS::KJSProxyImpl::evaluate (this=0x840ad60, filename=  
      {static null = {static null = <same as static member of an already seen  
type>, d = 0x8055070, static shared_null = 0x8055070}, d = 0x0, static  
shared_null = 0x8055070}, baseLine=0, str=@0x0, n=@0xbfffd740,  
completion=0xbfffd6d0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/ecma/kjs_proxy.cpp:154  
#50 0xb5d24d50 in KHTMLPart::executeScript (this=0x84a6290,   
    filename=@0xbfffd7b0, baseLine=0, n=@0x0, script=@0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/khtml_part.cpp:1154  
#51 0xb5d92330 in khtml::HTMLTokenizer::scriptExecution (this=0x875b858,   
    str=@0x0, scriptURL=@0xbfffd750, baseLine=0) at khtmlview.h:113  
#52 0xb5d9454f in khtml::HTMLTokenizer::notifyFinished (this=0x875b858)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:1728  
#53 0xb5e73dfc in khtml::CachedScript::ref (this=0x8770f00, c=0x875b880)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/misc/loader.cpp:314  
#54 0xb5d95e95 in khtml::HTMLTokenizer::scriptHandler (this=0x875b858)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:404  
#55 0xb5d96b79 in khtml::HTMLTokenizer::parseSpecial (this=0x875b858,   
    src=@0x875b988)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:333  
#56 0xb5d97ba4 in khtml::HTMLTokenizer::parseTag (this=0x875b858,   
    src=@0x875b988)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:1226  
#57 0xb5d99bb0 in khtml::HTMLTokenizer::write (this=0x875b858, str=@0x6,   
    appendData=false)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/khtml/html/htmltokenizer.cpp:1430  
#58 0xb5d1e3d8 in KHTMLPart::write (this=0x84a6290,   
    str=0x88802a0 "<body bgcolor=\"#F9FAFB\" topmargin=\"0\" leftmargin=\"0\"  
rightmargin=\"0\" marginwidth=\"0\" marginheight=\"0\">\r\n\r\n<table  
border=\"0\" width=\"100%\" cellspacing=\"0\" cellpadding=\"0\"  
background=\"\">\r\n<tr>\r\n\t<td alig"..., len=139120120) at stringit.h:115  
#59 0xb5d14dea in KHTMLPart::slotData (this=0x84a6290, kio_job=0x89fa048,   
    data=@0xbfffe440) at qmemarray.h:64  
#60 0xb5d36992 in KHTMLPart::qt_invoke (this=0x84a6290, _id=16, _o=0xbfffe000)  
    at qucom_p.h:316  
#61 0xb7337a23 in QObject::activate_signal (this=0x89fa048, clist=0x8517bd0,   
    o=0xbfffe000) at kernel/qobject.cpp:2356  
#62 0xb7d48019 in KIO::TransferJob::data (this=0xbfffe03c, t0=0x0, t1=@0x0)  
    at jobclasses.moc:993  
#63 0xb7d48088 in KIO::TransferJob::slotData (this=0x89fa048, _data=@0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kio/kio/job.cpp:900  
#64 0xb7d4816c in KIO::TransferJob::qt_invoke (this=0x89fa048, _id=18,   
    _o=0xbfffe130) at qucom_p.h:316  
#65 0xb7337a23 in QObject::activate_signal (this=0x89e69d8, clist=0x8669758,   
    o=0xbfffe130) at kernel/qobject.cpp:2356  
#66 0xb7d2f9bd in KIO::SlaveInterface::data (this=0xbfffe158, t0=@0x0)  
    at slaveinterface.moc:194  
#67 0xb7d33a6c in KIO::SlaveInterface::dispatch (this=0x89e69d8, _cmd=100,   
    rawdata=@0xbfffe440)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/kio/kio/slaveinterface.cpp:234  
#68 0xb7d31e7e in KIO::SlaveInterface::dispatch (this=0x89e69d8)  
     
at /home/thiago/programs/src/kde3/KDE/kdelibs/kio/kio/slaveinterface.cpp:173  
#69 0xb7d2baee in KIO::Slave::gotInput (this=0x89e69d8)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kio/kio/slave.cpp:300  
#70 0xb7d2ca88 in KIO::Slave::qt_invoke (this=0x89e69d8, _id=4, _o=0xbfffe5e0)  
    at slave.moc:113  
#71 0xb7337a23 in QObject::activate_signal (this=0x862cad8, clist=0x8511528,   
    o=0xbfffe5e0) at kernel/qobject.cpp:2356  
#72 0xb7337de5 in QObject::activate_signal (this=0x862cad8, signal=2,   
    param=48) at kernel/qobject.cpp:2449  
#73 0xb7718021 in QSocketNotifier::activated (this=0x862cad8, t0=48)  
    at .moc/debug-shared-mt/moc_qsocketnotifier.cpp:85  
#74 0xb735d520 in QSocketNotifier::event (this=0x862cad8, e=0xbfffe8f0)  
    at kernel/qsocketnotifier.cpp:258  
#75 0xb72c6725 in QApplication::internalNotify (this=0xbfffef90,   
    receiver=0x862cad8, e=0xbfffe8f0) at kernel/qapplication.cpp:2635  
#76 0xb72c5b43 in QApplication::notify (this=0xbfffef90, receiver=0x862cad8,   
    e=0xbfffe8f0) at kernel/qapplication.cpp:2358  
#77 0xb7a4b086 in KApplication::notify (this=0xbfffef90, receiver=0x862cad8,   
    event=0xbfffe8f0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kdecore/kapplication.cpp:550  
#78 0xb724a9af in QApplication::sendEvent (receiver=0x862cad8,   
    event=0xbfffe8f0) at qapplication.h:496  
#79 0xb72b1889 in QEventLoop::activateSocketNotifiers (this=0x80efcb8)  
    at kernel/qeventloop_unix.cpp:578  
#80 0xb72608ae in QEventLoop::processEvents (this=0x80efcb8, flags=4)  
    at kernel/qeventloop_x11.cpp:383  
#81 0xb72de6a6 in QEventLoop::enterLoop (this=0x80efcb8)  
    at kernel/qeventloop.cpp:198  
#82 0xb72de5c4 in QEventLoop::exec (this=0x80efcb8)  
    at kernel/qeventloop.cpp:145  
#83 0xb72c68c9 in QApplication::exec (this=0xbfffef90)  
    at kernel/qapplication.cpp:2758  
#84 0xb63e195f in kdemain (argc=0, argv=0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdebase/konqueror/konq_main.cc:206  
#85 0xb6494574 in kdeinitmain (argc=0, argv=0x0)  
    at ./konqueror/kdeinit_konqueror.la.cpp:3  
#86 0x0804e62d in launch (argc=2, _name=0x8076dd4 "konqueror",   
    args=0x8076de8 "\001", cwd=0x0, envc=1, envs=0x8076df9 "",   
    reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kinit/kinit.cpp:637  
#87 0x0804ee1d in handle_launcher_request (sock=8)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kinit/kinit.cpp:1201  
#88 0x0804f3d7 in handle_requests (waitForPid=0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kinit/kinit.cpp:1404  
#89 0x0804fc56 in main (argc=2, argv=0xbffff914, envp=0x0)  
    at /home/thiago/programs/src/kde3/KDE/kdelibs/kinit/kinit.cpp:1848  
 
Build revision 477777.
Comment 1 Thiago Macieira 2005-11-12 02:09:00 UTC
Same backtrace as bug 105873 which I can reproduce.

Steps to reproduce:
1) Go to www.torrentspy.com
2) click Directory
3) click Linux
4) click Applications (or any other)
5) click any item (like OpenSUSE, but any will do)
6) go Back
crash happens, reproducible every time.
Comment 2 Roland Wolters 2005-11-12 21:53:53 UTC
Can reproduce it, should I provide any data?
Suse 10.0, kde 3.5rc1
Comment 3 Maksim Orlovich 2005-11-13 21:57:12 UTC
A URL would be helpful :-)
Comment 4 Thiago Macieira 2005-11-13 22:04:24 UTC
I did give you an URL, but here's an even faster one:
http://www.torrentspy.com/directory.asp?mode=sub&id=265&cat=Applications

click OpenSUSE, let it load for a bit, then go Back
Comment 5 Thiago Macieira 2005-11-19 03:59:19 UTC
*** Bug 116660 has been marked as a duplicate of this bug. ***
Comment 6 Maksim Orlovich 2005-11-22 02:51:02 UTC
*** Bug 116846 has been marked as a duplicate of this bug. ***
Comment 7 Maksim Orlovich 2005-11-22 04:13:14 UTC
The reason we're crashing is that we somehow get in a state where we're running JS  in a frame, and it asks for the parent document, while the document somehow hasn't been restored. Then, the runtime tries to create a fallback empty document, which destroys the frame running the script
Comment 8 Maksim Orlovich 2005-11-22 04:35:04 UTC
Created attachment 13590 [details]
testcase

testcase for at least one variant of the bug. extract it, and click on fs.html,
then follow the instructions
Comment 9 Maksim Orlovich 2005-11-22 04:51:59 UTC
Note: I am not sure I can take it further, since I am afraid I don't understand the restoration code.
Comment 10 Maksim Orlovich 2005-11-22 04:57:31 UTC
*** Bug 116713 has been marked as a duplicate of this bug. ***
Comment 11 Maksim Orlovich 2005-11-27 18:29:06 UTC
*** Bug 117148 has been marked as a duplicate of this bug. ***
Comment 12 Tommi Tervo 2005-12-01 12:18:51 UTC
*** Bug 117424 has been marked as a duplicate of this bug. ***
Comment 13 Thiago Macieira 2005-12-01 23:23:36 UTC
*** Bug 117467 has been marked as a duplicate of this bug. ***
Comment 14 Tommi Tervo 2005-12-04 09:34:37 UTC
*** Bug 116378 has been marked as a duplicate of this bug. ***
Comment 15 Tommi Tervo 2005-12-08 08:59:49 UTC
*** Bug 117915 has been marked as a duplicate of this bug. ***
Comment 16 Germain Garand 2005-12-09 22:56:55 UTC
SVN commit 487251 by ggarand:

m_bCleared status must not be overriden though, as the restoration path
has already cleared by the time we reach begin(), and might very well be restoring frames.

BUG: 116156




 M  +2 -2      khtml_part.cpp  


--- branches/KDE/3.5/kdelibs/khtml/khtml_part.cpp #487250:487251
@@ -251,6 +251,7 @@
   d->m_paDebugScript = 0;
   d->m_bMousePressed = false;
   d->m_bRightMousePressed = false;
+  d->m_bCleared = false;
   d->m_paViewDocument = new KAction( i18n( "View Do&cument Source" ), CTRL + Key_U, this, SLOT( slotViewDocumentSource() ), actionCollection(), "viewDocumentSource" );
   d->m_paViewFrame = new KAction( i18n( "View Frame Source" ), 0, this, SLOT( slotViewFrameSource() ), actionCollection(), "viewFrameSource" );
   d->m_paViewInfo = new KAction( i18n( "View Document Information" ), CTRL+Key_I, this, SLOT( slotViewPageInfo() ), actionCollection(), "viewPageInfo" );
@@ -1874,12 +1875,11 @@
     }
   }
 
+  clear();
   d->m_bCleared = false;
   d->m_cacheId = 0;
   d->m_bComplete = false;
   d->m_bLoadEventEmitted = false;
-  clear();
-  d->m_bCleared = false;
 
   if(url.isValid()) {
       QString urlString = url.url();
Comment 17 Tommi Tervo 2005-12-18 14:42:38 UTC
*** Bug 118430 has been marked as a duplicate of this bug. ***
Comment 18 Thiago Macieira 2005-12-18 15:25:51 UTC
*** Bug 118568 has been marked as a duplicate of this bug. ***
Comment 19 Thiago Macieira 2005-12-18 23:54:49 UTC
*** Bug 118568 has been marked as a duplicate of this bug. ***
Comment 20 Martin Koller 2005-12-19 09:10:43 UTC
I updated kdelibs to rev. 489438 and it still crashes at www.schloss-esterhazy.at with the same bt.
Comment 21 Scott Jubenville 2005-12-21 20:03:55 UTC
Same problem for me on Gentoo with KDE 3.5.0 final. 
Happens everytime on ebay whether logged into account or not.
Comment 22 Thiago Macieira 2005-12-29 15:00:19 UTC
*** Bug 119164 has been marked as a duplicate of this bug. ***
Comment 23 Thiago Macieira 2005-12-29 15:09:44 UTC
I still cannot reproduce the crashes. I've tried several of them as reported and I don't see it happening nor assertion failures.
Comment 24 Martin Koller 2005-12-29 17:33:11 UTC
On Thursday 29 December 2005 15:09, Thiago Macieira wrote:

It's a pitty, but with the page it happend before all the time 
(www.schloss-esterhazy.at) I can also no longer reproduce it.
Comment 25 Thiago Macieira 2005-12-29 19:41:48 UTC
Can you reproduce it in any of the other websites?
Comment 26 Martin Koller 2005-12-30 00:05:44 UTC
On Thursday 29 December 2005 19:41, Thiago Macieira wrote:
No, sorry. But I get a lot of nspluginviewer crashes when I click around on 
www.torrentspy.com ... but all with useless backtrace.
Comment 27 Thiago Macieira 2005-12-30 21:58:50 UTC
*** Bug 119246 has been marked as a duplicate of this bug. ***
Comment 28 Thiago Macieira 2006-01-08 03:33:34 UTC
*** Bug 119719 has been marked as a duplicate of this bug. ***
Comment 29 Thiago Macieira 2006-01-08 03:34:51 UTC
This is believed to be fixed. We cannot reproduce the crash.

If you can with a recent Subversion checkout or KDE 3.5.1, let us know.
Comment 30 Tommi Tervo 2006-01-30 14:35:25 UTC
*** Bug 121034 has been marked as a duplicate of this bug. ***
Comment 31 David Baron 2006-01-31 15:23:17 UTC
3.5.1 -- is there a way of upgrading to this without rebuilding a whole new installation? I made 3.5 with konstruct.
Comment 32 Rémi Benoit 2014-05-08 11:02:43 UTC
*** Bug 117424 has been marked as a duplicate of this bug. ***