m_bCleared status must not be overriden though, as the restoration path has already cleared by the time we reach begin(), and might very well be restoring frames.

BUG: 116156



svn path=/branches/KDE/3.5/kdelibs/; revision=487251